Finalização CLI do projeto